[gd_scene load_steps=6 format=2]

[ext_resource path="res://Base/Base.gd" type="Script" id=1]
[ext_resource path="res://SpreadsheetBase/SpreadsheetBase.tscn" type="PackedScene" id=2]
[ext_resource path="res://Preset_Tabs/Internal_Standard_Tab.tscn" type="PackedScene" id=3]
[ext_resource path="res://Preset_Tabs/Main_Tab.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/bg_grey.jpg" type="Texture" id=5]

[node name="Base" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sprite" type="Sprite" parent="ParallaxBackground"]
modulate = Color( 0.490196, 0.490196, 0.490196, 1 )
position = Vector2( 470, 247 )
texture = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopPartMenueContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TopPartMenueContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1019.0
margin_bottom = 45.0

[node name="MenueButton" type="Button" parent="VBoxContainer/TopPartMenueContainer/HBoxContainer"]
margin_right = 56.0
margin_bottom = 40.0
text = "Menue"
align = 0

[node name="ActionMenueContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SpreadsheetBase" parent="VBoxContainer/ActionMenueContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 510.0
margin_bottom = 546.0

[node name="TabContainer" type="TabContainer" parent="VBoxContainer/ActionMenueContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 546.0
size_flags_horizontal = 3
tab_align = 0
drag_to_rearrange_enabled = true

[node name="Main" parent="VBoxContainer/ActionMenueContainer/TabContainer" instance=ExtResource( 4 )]
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ISTab" parent="VBoxContainer/ActionMenueContainer/TabContainer" instance=ExtResource( 3 )]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ISTab2" parent="VBoxContainer/ActionMenueContainer/TabContainer" instance=ExtResource( 3 )]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ISTab3" parent="VBoxContainer/ActionMenueContainer/TabContainer" instance=ExtResource( 3 )]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="FileOpenDialog" type="FileDialog" parent="."]
visible = true
margin_left = 161.0
margin_top = 66.0
margin_right = 766.0
margin_bottom = 306.0
popup_exclusive = true
window_title = "Open a File or Directory"
resizable = true
mode = 3
access = 2

[node name="MainPopUpMenu" type="PopupMenu" parent="."]
margin_top = 43.0
margin_right = 64.0
margin_bottom = 63.0

[connection signal="pressed" from="VBoxContainer/TopPartMenueContainer/HBoxContainer/MenueButton" to="." method="_on_MenueButton_pressed"]
[connection signal="file_selected" from="FileOpenDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="id_pressed" from="MainPopUpMenu" to="." method="_on_MainPopUpMenu_id_pressed"]
